--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
 - Pagination: revisar (errores en pág no existe)
+- WForm:      mostrar 404 cuando se intente editar un id que no exista
 
 - JavaScript minify:
    - https://github.com/tchwork/jsqueeze
